--- a/index.html
+++ b/index.html
@@ -116,13 +116,17 @@
                         <a class="nav-link" style="color: #F47522;" href="#">HOME</a>
                     </li>
                     <li class="nav-item navb-item">
-                        <a class="nav-link" href="#">ABOUT</a>
+                        <a class="nav-link" onMouseOver="this.style.color='#F47522'"
+                            onMouseOut="this.style.color='#19345E'" href="#">ABOUT</a>
                     </li>
                     <li class="nav-item navb-item">
-                        <a class="nav-link" href="#">EXPERIENCE</a>
+                        <a class="nav-link" onMouseOver="this.style.color='#F47522'"
+                            onMouseOut="this.style.color='#19345E'" href="#">EXPERIENCE</a>
                     </li>
                     <li class="nav-item navb-item me-5">
-                        <a class="nav-link" href="contactus.html">CONTACT US</a>
+                        <a class="nav-link" onMouseOver="this.style.color='#F47522'"
+                            onMouseOut="this.style.color='#19345E'" href="contactus.html">CONTACT
+                            US</a>
                     </li>
                 </ul>
             </div>
