--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
             background-image: url("img/bg-img.png");
             background-size: cover;
             background-attachment: fixed;
+            font-family: 'Roboto', sans-serif;
         }
 
         section .project {
