--- a/contactus.html
+++ b/contactus.html
@@ -77,7 +77,7 @@
             .logo {
                 background-color: #19345EA6;
                 height: 850px;
-                width: 500px;
+                width: 600px;
             }
 
             .logo-alta {
@@ -101,7 +101,7 @@
     <div class="container-fluid ms-0 ps-0 animate-bottom" style="display:none;" id="myDiv">
         <div class="row justify-content-between">
             <div class="col-md-4 kiri">
-                <img src="img/charles-rRWiVQzLm7k-unsplash.jpg" width="500px" height="850px" alt="" srcset="">
+                <img src="img/charles-rRWiVQzLm7k-unsplash.jpg" width="600px" height="850px" alt="" srcset="">
                 <div class="logo position-absolute top-0 start-0">
                 </div>
                 <img src="img/logo-ALTA-v2@2x.png" width="350px" class="position-absolute top-50 start-0 ms-5 ps-5"
@@ -112,19 +112,18 @@
                 <form class="form needs-validation" novalidate>
                     <div class="mb-3 has-validation">
                         <label for="exampleInputEmail1" class="form-label fs-4">Full Name</label>
-                        <input type="email" class="form-control" placeholder="Your Full Name Here..." id="fullName"
+                        <input type="text" class="form-control" placeholder="Your Full Name Here..." id="fullName"
                             required>
                         <div class="invalid-feedback">Name Kosong</div>
                     </div>
                     <div class="mb-3">
                         <label for="exampleInputPassword1" class="form-label fs-4">Email Adress</label>
-                        <input type="password" placeholder="example@domail.com" required class="form-control"
-                            id="email">
+                        <input type="email" placeholder="example@domail.com" required class="form-control" id="email">
                         <div class="invalid-feedback">Email Kosong</div>
                     </div>
                     <div class="mb-3">
                         <label for="exampleInputEmail1" class="form-label fs-4">Phone Number</label>
-                        <input type="email" class="form-control" required placeholder="08573890xxxxx" id="phone">
+                        <input type="number" class="form-control" required placeholder="08573890xxxxx" id="phone">
                         <div class="invalid-feedback">Phone Kosong</div>
                     </div>
                     <div class=" mb-3">
@@ -145,7 +144,7 @@
                             placeholder="Your Full Name Here..." cols="30" rows="5"></textarea>
                         <div class="invalid-feedback">Message Kosong</div>
                     </div>
-                    <button class="submit" onclick="newpage()" name="submit" type="submit">Submit</button>
+                    <button class="submit" onclick="alert('sukses')" name="submit" type="submit">Submit</button>
                 </form>
             </div>
         </div>
