--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
+    <link rel="icon" href="./img/logo-ALTA@2x.png" type="image/x-icon">
     <title>Hello, world!</title>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@500;700&display=swap');
@@ -79,6 +80,14 @@
                 font-weight: 700;
             }
 
+            .active {
+                color: #e4640f !important;
+            }
+
+            .nav-link:hover {
+                color: #e4640f !important;
+            }
+
             .kanan {
                 margin-left: 5em;
             }
@@ -111,19 +120,16 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto d-flex justify-content-start">
                     <li class="nav-item navb-item">
-                        <a class="nav-link" style="color: #F47522;" href="#">HOME</a>
+                        <a class="nav-link active" href="#">HOME</a>
                     </li>
                     <li class="nav-item navb-item">
-                        <a class="nav-link" onMouseOver="this.style.color='#F47522'"
-                            onMouseOut="this.style.color='#19345E'" href="#">ABOUT</a>
+                        <a class="nav-link" href="#">ABOUT</a>
                     </li>
                     <li class="nav-item navb-item">
-                        <a class="nav-link" onMouseOver="this.style.color='#F47522'"
-                            onMouseOut="this.style.color='#19345E'" href="#">EXPERIENCE</a>
+                        <a class="nav-link" href="#">EXPERIENCE</a>
                     </li>
                     <li class="nav-item navb-item me-5">
-                        <a class="nav-link" onMouseOver="this.style.color='#F47522'"
-                            onMouseOut="this.style.color='#19345E'" href="contactus.html">CONTACT
+                        <a class="nav-link" href="contactus.html">CONTACT
                             US</a>
                     </li>
                 </ul>
