--- a/contactus.html
+++ b/contactus.html
@@ -12,15 +12,14 @@
         integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
 
     <style>
+        @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@500;700&display=swap');
+
         body {
             color: #19345E;
+            font-family: 'Roboto', sans-serif;
         }
 
-        .kiri {
-            display: none;
-        }
-
-        button {
+        .btn {
             border-radius: 20px;
             background-color: #F47522;
             padding: 8px 19px;
@@ -30,7 +29,28 @@
         }
 
         button:hover {
-            background-color: #e4640f;
+            background-color: #e4640f !important;
+        }
+
+        .bg-alta {
+            object-fit: cover;
+            width: 480px;
+            height: 250px;
+        }
+
+        .bg-ungu {
+            background-color: #19345EA6;
+            width: 480px;
+            height: 250px;
+        }
+
+        .logo {
+            width: 480px;
+            height: 250px;
+            object-fit: cover;
+            top: 0;
+            margin: 0;
+            padding: 5;
         }
 
         .animate-bottom {
@@ -69,20 +89,25 @@
             display: none;
         }
 
-        @media only screen and (min-width: 768px) {
-            .kiri {
-                display: block;
+        @media only screen and (min-width: 540px) {
+            .bg-alta {
+                width: 600px;
+                height: 930px;
             }
 
             .logo {
-                background-color: #19345EA6;
-                height: 850px;
-                width: 600px;
+                background-color: none;
+                width: 350px;
+                height: auto;
+                top: 25em;
+                margin-left: 90px;
+                padding: 5;
             }
 
-            .logo-alta {
-                margin-bottom: 300px;
-                opacity: 0, 5;
+            .bg-ungu {
+                background-color: #19345EA6;
+                height: 930px;
+                width: 600px;
             }
         }
     </style>
@@ -100,39 +125,38 @@
 
     <div class="container-fluid ms-0 ps-0 animate-bottom" style="display:none;" id="myDiv">
         <div class="row justify-content-between">
-            <div class="col-md-4 kiri">
-                <img src="img/charles-rRWiVQzLm7k-unsplash.jpg" width="600px" height="850px" alt="" srcset="">
-                <div class="logo position-absolute top-0 start-0">
+            <div class="col kiri">
+                <img src="img/charles-rRWiVQzLm7k-unsplash.jpg" class="bg-alta" alt="" srcset="">
+                <div class="bg-ungu position-absolute top-0 start-0">
                 </div>
-                <img src="img/logo-ALTA-v2@2x.png" width="350px" class="position-absolute top-50 start-0 ms-5 ps-5"
-                    alt="">
+                <img src="img/logo-ALTA-v2@2x.png" class=" logo position-absolute start-0" alt="">
             </div>
-            <div class="col-md-6 p-3 m-3">
+            <div class="col p-3 m-5">
                 <h1>Contact us</h1>
-                <form class="form needs-validation" novalidate>
+                <form class="form needs-validation" action="review.html" novalidate>
                     <div class="mb-3 has-validation">
                         <label for="exampleInputEmail1" class="form-label fs-4">Full Name</label>
-                        <input type="text" class="form-control" placeholder="Your Full Name Here..." id="fullName"
-                            required>
-                        <div class="invalid-feedback">Name Kosong</div>
+                        <input type="text" class="form-control" name="fname" placeholder="Your Full Name Here..."
+                            id="fName" required>
+                        <div class="invalid-feedback">Full name cannot be empty</div>
                     </div>
                     <div class="mb-3">
                         <label for="exampleInputPassword1" class="form-label fs-4">Email Adress</label>
                         <input type="email" placeholder="example@domail.com" required class="form-control" id="email">
-                        <div class="invalid-feedback">Email Kosong</div>
+                        <div class="invalid-feedback">Email address cannot be empty</div>
                     </div>
                     <div class="mb-3">
                         <label for="exampleInputEmail1" class="form-label fs-4">Phone Number</label>
                         <input type="number" class="form-control" required placeholder="08573890xxxxx" id="phone">
-                        <div class="invalid-feedback">Phone Kosong</div>
+                        <div class="invalid-feedback">Phone number cannot be empty</div>
                     </div>
                     <div class=" mb-3">
                         <label for="exampleInputEmail1" class="form-label fs-4">Nationality</label>
-                        <select class="form-select" required>
-                            <option selected>Selectted</option>
-                            <option value="1">One</option>
-                            <option value="2">Two</option>
-                            <option value="3">Three</option>
+                        <select class="form-select" id="national" required>
+                            <option selected disabled value="">Selected</option>
+                            <option value="Indonesia">Indonesia</option>
+                            <option value="England">England</option>
+                            <option value="UK">UK</option>
                         </select>
                         <div class="invalid-feedback">
                             Please select a valid Nationality.
@@ -140,50 +164,20 @@
                     </div>
                     <div class="mb-3">
                         <label for="exampleInputEmail1" class="form-label fs-4">Message</label>
-                        <textarea name="message" class="form-control" required id=""
+                        <textarea name="message" class="form-control" required id="message"
                             placeholder="Your Full Name Here..." cols="30" rows="5"></textarea>
                         <div class="invalid-feedback">Message Kosong</div>
                     </div>
-                    <button class="submit" onclick="alert('sukses')" name="submit" type="submit">Submit</button>
+                    <button class="submit btn text-white" onclick="passvall()" name="submit"
+                        type="submit">Submit</button>
                 </form>
             </div>
         </div>
     </div>
-    <div class="loader"></div>
 
-
-    <script>
-        var loading;
-
-        function loadFunc()
-        {
-            loading = setTimeout( showPage, 3000 );
-        }
-
-        function showPage()
-        {
-            document.getElementById( "loader" ).style.display = "none";
-            document.getElementById( "myDiv" ).style.display = "block";
-        }
-        ( function ()
-        {
-            var forms = document.querySelectorAll( '.needs-validation' )
-            Array.prototype.slice.call( forms )
-                .forEach( function ( form )
-                {
-                    form.addEventListener( 'submit', function ( event )
-                    {
-                        if ( !form.checkValidity() )
-                        {
-                            event.preventDefault()
-                            event.stopPropagation()
-                        }
-                        form.classList.add( 'was-validated' )
-                    }, false )
-                } )
-        } )()
-
-    </script>
+    <script src="./js/loader.js"></script>
+    <script src="./js/validation.js"></script>
+    <script src="./js/localstorage.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj"
         crossorigin="anonymous"></script>
