--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
             font-family: 'Roboto', sans-serif;
         }
 
-
         .navb-logo {
             margin-left: 15px;
         }
@@ -31,8 +30,8 @@
             color: #19345E;
         }
 
-        button {
-            border-radius: 20px;
+        .btn {
+            border-radius: 20px !important;
             background-color: #F47522;
             padding: 6px 11px;
             margin: 0;
@@ -139,16 +138,16 @@
     <section class="project">
         <div class="container">
             <div class="row vh-100 justify-content-center text-center align-items-center">
-                <div class="col-lg-4">
+                <div class="col">
                     <img src="./img/matthew-hamilton-tNCH0sKSZbA-unsplash.jpg" width="355px"
-                        class="rounded-circle profile" alt="" srcset="">
+                        class="rounded-circle profile pt-3" alt="" srcset="">
                 </div>
-                <div class="col-lg-6 kanan">
+                <div class="col kanan">
                     <div class="content mb-5 mt-3">
                         <h5>Hi My Name is</h5>
                         <h1>Anne Sullivan</h1>
                         <h4>I Build things for the web</h4>
-                        <button class="orange text-white mt-4">Get In Touch</button>
+                        <button class="btn text-white mt-4">Get In Touch</button>
                     </div>
                 </div>
             </div>
